RESOLVED FIXED105836
getComputedStyle returns "left" instead of "none" for "float" on abspos elements
https://bugs.webkit.org/show_bug.cgi?id=105836
Summary getComputedStyle returns "left" instead of "none" for "float" on abspos elements
Mike Sherov
Reported 2012-12-28 11:12:14 PST
http://www.w3.org/TR/css3-positioning/ Section 8: > if ‘position’ has the value absolute, page or fixed, and the value of float is left or right, the box is absolutely positioned and the computed value of float is none. Webkit incorrectly returns "left". This has surfaced as a jQuery bug: http://bugs.jquery.com/ticket/13126#comment:1 Here's a jsfiddle demonstrating the problem: http://jsfiddle.net/ChPCD/7/ Note the output says "left" for "absolute" instead of "none". The same test case returns correct values in FF15, Opera 12, and IE9+
Attachments
Proposed patch (4.65 KB, patch)
2013-01-27 16:04 PST, Uday Kiran
no flags
Patch (4.79 KB, patch)
2013-01-28 10:57 PST, Uday Kiran
no flags
Patch (4.79 KB, patch)
2013-01-28 11:11 PST, Uday Kiran
no flags
Patch (4.92 KB, patch)
2013-01-28 11:56 PST, Uday Kiran
no flags
Uday Kiran
Comment 1 2013-01-27 16:04:23 PST
Created attachment 184924 [details] Proposed patch
Tony Chang
Comment 2 2013-01-28 10:03:04 PST
Comment on attachment 184924 [details] Proposed patch I mentioned on IRC that CSSComputedStyleDeclaration.cpp might be a better place for this type of change since we don't need to change the style for rendering.
Uday Kiran
Comment 3 2013-01-28 10:57:01 PST
Created attachment 185008 [details] Patch Fixed review comments.
Uday Kiran
Comment 4 2013-01-28 11:11:03 PST
Tony Chang
Comment 5 2013-01-28 11:42:35 PST
Comment on attachment 185014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=185014&action=review > LayoutTests/ChangeLog:10 > + If 'position' has the value absolute, page or fixed, and the value of float is > + left or right, the box is absolutely positioned and the computed value of float is none. > + http://www.w3.org/TR/css3-positioning/#dis-pos-flo Please mention that this matches Firefox and IE. BTW, do you know of any websites that depend on this behavior?
Uday Kiran
Comment 6 2013-01-28 11:56:28 PST
Created attachment 185027 [details] Patch Updated ChangeLog
Uday Kiran
Comment 7 2013-01-28 11:59:45 PST
Thanks for review. (In reply to comment #5) > (From update of attachment 185014 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=185014&action=review > > > LayoutTests/ChangeLog:10 > > + If 'position' has the value absolute, page or fixed, and the value of float is > > + left or right, the box is absolutely positioned and the computed value of float is none. > > + http://www.w3.org/TR/css3-positioning/#dis-pos-flo > > Please mention that this matches Firefox and IE. BTW, do you know of any websites that depend on this behavior? Fixed ChangeLog. Sorry I am not aware of websites. Can I carry-forward your r+ to next patch? If yes, how do I do it with webkit-patch?
Tony Chang
Comment 8 2013-01-28 12:09:51 PST
Comment on attachment 185027 [details] Patch When the previous patch still had r+, you can use 'webkit-patch land-safely' to forward on the review flag.
Uday Kiran
Comment 9 2013-01-28 12:28:08 PST
(In reply to comment #8) > (From update of attachment 185027 [details]) > When the previous patch still had r+, you can use 'webkit-patch land-safely' to forward on the review flag. Thanks. Will remember it from next time :)
WebKit Review Bot
Comment 10 2013-01-28 12:45:04 PST
Comment on attachment 185027 [details] Patch Clearing flags on attachment: 185027 Committed r140993: <http://trac.webkit.org/changeset/140993>
WebKit Review Bot
Comment 11 2013-01-28 12:45:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.