getComputedStyle returns "left" instead of "none" for "float" on abspos elements https://bugs.webkit.org/show_bug.cgi?id=105836

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-01-28
Reviewed by Tony Chang.

If 'position' has the value absolute, page or fixed, and the value of float is
left or right, the box is absolutely positioned and the computed value of float is none.
http://www.w3.org/TR/css3-positioning/#dis-pos-flo
This matches behavior of Firefox 18, Opera 12 and IE9.

Source/WebCore:

Test: fast/css/position-absolute-float.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

* fast/css/position-absolute-float-expected.txt: Added.
* fast/css/position-absolute-float.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@140993 bbb929c8-8fbe-4397-9dbb-9b2b20218538